# webscraping_medalhao_microservicos_CICD_AWS

./: .gitignore  README.md
ingestion_service/: .bumpversion.cfg  Dockerfile  Makefile  pyproject.toml
ingestion_service/app/: api.py  config.py  protocols.py  repository.py  scraper.py
ingestion_service/tests/: test_api.py  test_environment.py  test_repository.py  test_scraper.py
