[tool.poetry]
name = "ingestion-service"
version = "0.1.0"
description = "Microserviço responsável pela captura de dados do arXiv e persistência na camada Bronze."
authors = ["Admin <admin@example.com>"]
readme = "../README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115,<1.0"
uvicorn = ">=0.30,<1.0"
pydantic = ">=2.9,<3.0"
pydantic-settings = ">=2.6,<3.0"
requests = ">=2.32,<3.0"
beautifulsoup4 = ">=4.12,<5.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"
pytest-cov = ">=4.1,<6.0"
httpx = ">=0.27,<1.0"
pre-commit = ">=4.5,<5.0"
bump2version = ">=1.0,<2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"